# travel-trend-detector

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART_CLAUDE_CODE.md  README.md  TECHNICAL_SPEC.md  pyproject.toml
config/markets/: cz.yaml  sk.yaml
reports/2026-W12-CZ/: README.md  methodology.md
reports/2026-W12-CZ/destinations/: airbnb-platform.md  alpe-di-siusi.md  alps.md  austria.md  brenta-dolomites.md  bulgaria.md  decin.md  egypt.md  fausto-susatti-via-ferrata.md  greece.md  hluboka-ferrata.md  invia.md  khadlaj-island.md  lago-di-sorapis.md  lake-braies.md  lake-sorapis.md  love-island.md  not-a-specific-destination.md  not-a-travel-destination.md  oman.md  sardinia.md  seceda,-dolomites.md  seceda.md  tre-cime-di-lavaredo.md  via-ferrata-fausto-susatti.md  via-ferrata-rio-sallagoni.md  zanzibar.md
reports/2026-W12-CZ/raw-data/: google-trends.json  instagram.json  search-results.json
reports/2026-W13-CZ/: README.md  methodology.md
reports/2026-W13-CZ/destinations/: alpe-di-siusi.md  alpine-skiing.md  alps.md  apennines.md  armenia.md  aspen-ski-resort.md  austrian-via-ferratas.md  batumi.md  black-mountain-ski-resort.md  black-mountain.md  bora-bora.md  boulder.md  (+27 more)
src/: config.py  main.py
src/analysis/: claude_analyzer.py  content_gap.py  opportunity.py  trend_scorer.py
src/collectors/: google_search.py  google_trends.py  instagram.py  twitter.py
src/report/: generator.py
src/utils/: cache.py  log_stream.py  normalization.py
tests/: test_collectors.py  test_scoring.py
web/: app.py
web/static/: style.css
web/templates/: index.html
(+36 files in other folders)
